src/Pages/CSS/about.css
#about-page {
    max-width: 90%;
    margin-left: auto;
    margin-right: auto;
    margin-top: calc(65px + 8vh);
    background-color: #35444e;
}

.about-text {
    margin-left: auto;
    margin-right: auto;
    padding-top: 3%;
    padding-bottom: 3%;
    width: 80vw;
    filter: drop-shadow(0 2mm 2mm #97aab457);
}

.link {
    color: #ffd6e9;
    text-decoration: none;
    font-family: 'HK Grotesk SemiBold', sans-serif;
}

.link:hover {
    background-color: #ffd6e9;
    color: #388888;
}

